--- a/index.html
+++ b/index.html
@@ -23,17 +23,22 @@
 
         <div class="banner">
             <div class="banner-content">
-                <h3 class=""banner-greetings>Hi, I  am</h3>
+                <h3 class="banner-greetings">Hi, I  am</h3>
                 <h3 class="banner_title">Mary Hardy</h3>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <p class="banner_massage">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary btn-download">Download CV</button>
+                <button class="btn-primary btn-contact">Contact</button>
             </div>
             <img class="profile-picture" src="images/hardy.png" alt="Hardy bhai">
         </div>
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
+        </section>
 
     </main>
     <footer>
