--- a/index.html
+++ b/index.html
@@ -93,6 +93,73 @@
             </div>
 
         </section>
+        <!--Resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resumecolumn">
+                    <div class="reume-column-title">
+                        <h3>My Education</h3>
+                    </div>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer EngineeringMaster in Computer Engineering</h2>
+                        <h2 class="resume-item-instit">Harvard University / 2015 - 2017</h2>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer EngineeringMaster in Computer Engineering</h2>
+                        <h2 class="resume-item-instit">Harvard University / 2015 - 2017</h2>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer EngineeringMaster in Computer Engineering</h2>
+                        <h2 class="resume-item-instit">Harvard University / 2015 - 2017</h2>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                    </div>
+                </div>
+                <div class="resumecolumn">
+                    <div class="reume-column-title">
+                        <h3>My Experience</h3>
+                    </div>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h2 class="resume-item-instit">Apple Inc / 2020 - Current</h2>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Jr. Font End Developer</h2>
+                        <h2 class="resume-item-instit">Dribbble Inc / 2018 - 2022</h2>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">HTML Developer</h2>
+                        <h2 class="resume-item-instit">Adobe Inc / 2017 - 2018</h2>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download-CV</button>
+            </div>
+
+        </section>
 
     </main>
     <footer>
