--- a/index.html
+++ b/index.html
@@ -163,6 +163,26 @@
 
     </main>
     <footer>
+        <div class="footer-column">
+            <h3 class="footer-title">Lets Connect</h3>
+            <p class="footer-desc">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+
+            <div class="social-media">
+                <a href="#"><img src="images/icons/facebook.png" alt=""></a>
+                <a href="#"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="#"><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+
+        <div class="footer-column">
+            <h3 class="footer-title">Let’s Message me</h3>
+            <form class="contact-form"  action="">
+                <input class='text' type="text" placeholder="Your Name: ">
+                <input class='email' type="email" name="" id="" placeholder="Your Email: ">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
 
     </footer>
     
