--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/4d3febdcd3.js" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
     <header class="header">
@@ -26,8 +30,8 @@
                 <h3 class="banner-greetings">Hi, I  am</h3>
                 <h3 class="banner_title">Mary Hardy</h3>
                 <p class="banner_massage">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary btn-download">Download CV</button>
-                <button class="btn-primary btn-contact">Contact</button>
+                <button class="btn-primary btn-download"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary btn-contact"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-picture" src="images/hardy.png" alt="Hardy bhai">
         </div>
@@ -156,7 +160,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download-CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>Download-CV</button>
             </div>
 
         </section>
